# flask-playground

./: .gitignore  pyproject.toml
app/: app.py
