[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Luc Zwanenberg <luc.zwanenberg@kabisa.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"

[tool.poetry.scripts]
start = "app.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
